--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -34,33 +34,40 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    @Html.DevExpress().Panel(settings => {
-        settings.Name = "HeaderPane";
-        settings.FixedPosition = PanelFixedPosition.WindowTop;
-        settings.Collapsible = true;
-        settings.SettingsAdaptivity.CollapseAtWindowInnerWidth = 500;
-        settings.ControlStyle.CssClass = "headerPane";
-        settings.Styles.Panel.CssClass = "panel";
-        settings.Styles.ExpandedPanel.CssClass = "expandedPanel";
-        settings.Styles.ExpandBar.CssClass = "bar";
-        settings.SetContent(() => {
-            Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Full);
-        });
-        settings.SetExpandBarTemplateContent((c) => {
-            Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Title);
-        });
-    }).GetHtml()
-
+    @if (Request.IsAuthenticated)
+    {
+        Html.DevExpress().Panel(settings =>
+        {
+            settings.Name = "HeaderPane";
+            settings.FixedPosition = PanelFixedPosition.WindowTop;
+            settings.Collapsible = true;
+            settings.SettingsAdaptivity.CollapseAtWindowInnerWidth = 500;
+            settings.ControlStyle.CssClass = "headerPane";
+            settings.Styles.Panel.CssClass = "panel";
+            settings.Styles.ExpandedPanel.CssClass = "expandedPanel";
+            settings.Styles.ExpandBar.CssClass = "bar";
+            settings.SetContent(() =>
+            {
+                Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Full);
+            });
+            settings.SetExpandBarTemplateContent((c) =>
+            {
+                Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Title);
+            });
+        }).GetHtml();
+    }
+     
     <script type="text/javascript">
-        function updateHeaderMenuOrientation(){
-            if(!window.HeaderMenu) return;
+        function updateHeaderMenuOrientation() {
+            if (!window.HeaderMenu) return;
             var orientation = HeaderPane.IsExpandable() ? 'Vertical' : 'Horizontal';
-            if(orientation !== HeaderMenu.GetOrientation())
+            if (orientation !== HeaderMenu.GetOrientation())
                 HeaderMenu.SetOrientation(orientation);
+
+            var collection = ASPxClientControl.GetControlCollection();
+            collection.ControlsInitialized.AddHandler(updateHeaderMenuOrientation);
+            collection.BrowserWindowResized.AddHandler(updateHeaderMenuOrientation);
         }
-        var collection = ASPxClientControl.GetControlCollection();
-        collection.ControlsInitialized.AddHandler(updateHeaderMenuOrientation);
-        collection.BrowserWindowResized.AddHandler(updateHeaderMenuOrientation);
     </script>
 
     @Html.DevExpress().Panel(settings => {
