--- a/KetoSavageWeb/KetoSavageWeb/Content/Site.css
+++ b/KetoSavageWeb/KetoSavageWeb/Content/Site.css
@@ -1,127 +1,173 @@
 html, body {
-    background-color: #000000;
-    margin: 0;
-    padding: 0;
+	background-color: #000000;
+	margin: 0;
+	/*padding: 0;*/
+	/*display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;*/
+	/*margin: auto;
+	width: 50%;
+	border: 3px solid green;
+	padding: 10px;*/
 }
 
 /* Header */
+
 .dxpnl-edge.t.headerPane 
 {
-    background-color: #000000;
-    background-position: left top;
-    background-repeat: no-repeat;
+	background-color: #000000;
+	background-position: left top;
+	background-repeat: no-repeat;
 }
 .dxpnl-edge.t.headerPane.panel 
 {
-    padding: 0;
+	padding: 0;
 }
 .headerMenu 
 {
-    background-color: #000000;
-    border-width: 0!important;
-    border-top-width: 1px!important;
+	background-color: #000000;
+	border-width: 0!important;
+	border-top-width: 1px!important;
 }
 .expandedPanel 
 {
-    padding: 2px!important;
+	padding: 2px!important;
 }
 .expandedPanel .headerMenu 
 {
-    border-top-width: 0!important;
+	border-top-width: 0!important;
 }
 .templateTitle 
 {
-    color: #ffffff;
-    float:left;
-    margin: 12px 12px 18px;
+	color: #ffffff;
+	float:left;
+	margin: 12px 12px 18px;
 }
 .expandedPanel .templateTitle 
 {
-    display: none;
+	display: none;
 }
+
+/*.homeButtonLink .templateTitle
+{
+	 background: url(~/Content/Images/KSLogo_white.png) no-repeat top left;
+	 display: block;
+	 text-indent: -9999px; /* hides the link text */
+}*/
+
 .dxpnl-edge.t.headerPane.bar .templateTitle 
 {
-    margin: 0;
+	margin: 0;
 }
 .templateTitle a 
 {
-    text-decoration: none;
-    font-size: x-large;
-    color: #ffffff;
+	text-decoration: none;
+	font-size: x-large;
+	color: #ffffff;
 }
 .loginControl 
 {
-    float: right;
-    margin: 24px 25px 12px;
-    font-size: 12px;
+	float: right;
+	margin: 24px 25px 12px;
+	font-size: 12px;
 }
 .expandedPanel .loginControl
 {
-    float: none;
-    margin-left: 12px;
-    margin-bottom: 24px;
+	float: none;
+	margin-left: 12px;
+	margin-bottom: 24px;
 }
 .loginControl a 
 {
-    color: #ffffff;
-    text-decoration: none;
-    border-bottom: dashed 1px black;
-    display: inline-block;
+	color: #ffffff;
+	text-decoration: none;
+	border-bottom: dashed 1px black;
+	display: inline-block;
 }
 
 
 /* Footer */
 .dxpnl-edge.b.footerPane 
 {
-    background-color: #000000;
+	background-color: #000000;
 }
 .dxpnl-edge.b.footerPane.panel 
 {
-    padding: 0;
+	padding: 0;
 }
 .footerMenu 
 {
-    float: right;
-    padding-top: 7px;
+	float: right;
+	padding-top: 7px;
 }
 .copyright 
 {
-    float: left;
-    margin: 30px 15px 11px;
+	float: left;
+	margin: 30px 15px 11px;
 }
 .content 
 {
-    padding: 5px;
+	padding: 5px;
 }
+.center
+{
+	border: 3px solid green;
+    text-align: center;
+
+}
+
+.loginForm
+{
+    border: 3px solid red;
+    width: 100%;
+    margin: auto;
+    position: relative;
+    float: none !important;
+    display: block;
+    max-width: 400px;
+}
+
+.center img
+{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+}
+
 
 /* Left Panel */
 .leftPane.panel
 {
-    padding: 1px;
-    width: 200px;
+	padding: 1px;
+	width: 200px;
 }
 
 /* Right Panel */
 .rightPane.panel
 {
-    padding: 0;
-    width: 250px;
+	padding: 0;
+	width: 250px;
 }
 
 /* Account */
 .accountHeader h2 
 {
-    margin: 10px 0 7px 0;
-    font-size: 16px;
+	margin: 10px 0 7px 0;
+	font-size: 16px;
 }
 .accountHeader p 
 {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 .accountHeader 
 {
-    margin-bottom: 20px;
+	color: #DEDEDE;
+	margin-bottom: 20px;
 }
 
 
@@ -130,54 +176,54 @@ html, body {
 .dxpnlControl_iOS.rightPane,
 .dxpnlControl_iOS.contentPane
 {
-    border-width: 1px !important;
+	border-width: 1px !important;
 }
 .dxpnlControl_iOS.leftPane.panel
 {
-    width: 300px;
+	width: 300px;
 }
 .dxpnlControl_iOS.rightPane
 {
-    width: 450px;
+	width: 450px;
 }
 .dxpnlControl_iOS .templateTitle
 {
-    margin: 17px 25px;
+	margin: 17px 25px;
 }
 .dxpnlControl_iOS .templateTitle a
 {
-    color: #303030;
-    font-size: 26px;
-    line-height: 1em;
-    font-weight: bold;
+	color: #303030;
+	font-size: 26px;
+	line-height: 1em;
+	font-weight: bold;
 }
 .dxpnlControl_iOS .loginControl a
 {
-    color: #0160E7;
-    text-decoration: underline;
-    font-size: 20px;
-    font-weight: bold;
+	color: #0160E7;
+	text-decoration: underline;
+	font-size: 20px;
+	font-weight: bold;
 }
 .dxpnlControl_iOS.mainContentPane
 {
-    border-width: 0px !important;
-    box-shadow: initial;
-    -webkit-box-shadow: initial;
-    -moz-box-shadow: initial;
+	border-width: 0px !important;
+	box-shadow: initial;
+	-webkit-box-shadow: initial;
+	-moz-box-shadow: initial;
 }
 .dxpnlControl_iOS.dxpnl-edge.b.footerPane
 {
-    border-width: 1px !important;
+	border-width: 1px !important;
 }
 .dxpnlControl_iOS .accountHeader p
 {
-    color: #303030;
+	color: #303030;
 }
 .dxpnlControl_iOS .accountHeader h2
 {
-    color: #303030;
-    font-size: 26px;
-    margin-bottom: 10px;
+	color: #303030;
+	font-size: 26px;
+	margin-bottom: 10px;
 }
 
 
@@ -186,21 +232,21 @@ html, body {
 .dxpnlControl_Aqua.dxpnl-edge.b.footerPane,
 .dxpnlControl_Aqua .footerMenu li
 {
-    background-color: #BFDBFF;
+	background-color: #BFDBFF;
 }
 .dxpnlControl_Aqua.dxpnl-edge.t.headerPane
 {
-    background-image: url('images/AquaHeader.jpg');
+	background-image: url('images/AquaHeader.jpg');
 }
 .dxpnlControl_Aqua .accountHeader h2
 {
-    color: #5689C5;
+	color: #5689C5;
 }
 .dxpnlControl_Aqua .loginControl a,
 .dxpnlControl_Aqua .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -209,17 +255,17 @@ html, body {
 .dxpnlControl_DevEx.dxpnl-edge.b.footerPane,
 .dxpnlControl_DevEx .footerMenu li
 {
-    background-color: #F2F3F4;
+	background-color: #F2F3F4;
 }
 .dxpnlControl_DevEx .templateTitle a,
 .dxpnlControl_DevEx .loginControl,
 .dxpnlControl_DevEx .loginControl a
 {
-    color: #4B4B57;
+	color: #4B4B57;
 }
 .dxpnlControl_DevEx .loginControl a 
 {
-    border-bottom-color: #4B4B57;
+	border-bottom-color: #4B4B57;
 }
 
 
@@ -228,26 +274,26 @@ html, body {
 .dxpnlControl_BlackGlass.dxpnl-edge.b.footerPane,
 .dxpnlControl_BlackGlass .footerMenu li
 {
-    background-color: #2A2A2A;
-    color: white;
+	background-color: #2A2A2A;
+	color: white;
 }
 .dxpnlControl_BlackGlass.dxpnl-edge.t.headerPane
 {
-    background-image: url('images/BlackGlassHeader.jpg');
+	background-image: url('images/BlackGlassHeader.jpg');
 }
 .dxpnlControl_BlackGlass .leftPanel li[class$="dxnb-last"] ul
 {
-    border-bottom: 1px solid black;
+	border-bottom: 1px solid black;
 }
 .dxpnlControl_BlackGlass .accountHeader p
 {
-    color: #585858;
+	color: #585858;
 }
 .dxpnlControl_BlackGlass .loginControl a,
 .dxpnlControl_BlackGlass .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -256,33 +302,33 @@ html, body {
 .dxpnlControl_Glass.dxpnl-edge.b.footerPane,
 .dxpnlControl_Glass .footerMenu li
 {
-    background-color: #CFE0E7;
+	background-color: #CFE0E7;
 }
 .dxpnlControl_Glass.dxpnl-edge.t.headerPane
 {
-    background-image: url('images/GlassHeader.jpg');
+	background-image: url('images/GlassHeader.jpg');
 }
 .dxpnlControl_Glass .footerMenu *
 {
-    background-image: none !important;
+	background-image: none !important;
 }
 .dxpnlControl_Glass .templateTitle a,
 .dxpnlControl_Glass .loginControl,
 .dxpnlControl_Glass .loginControl a
 {
-    color: #4B4B57;
+	color: #4B4B57;
 }
 .dxpnlControl_Glass .loginControl a 
 {
-    border-bottom-color: #4B4B57;
+	border-bottom-color: #4B4B57;
 }
 .dxpnlControl_Glass .accountHeader h2
 {
-    color: #387FA4;
+	color: #387FA4;
 }
 .dxpnlControl_Glass .accountHeader p
 {
-    color: #575757;
+	color: #575757;
 }
 
 
@@ -292,29 +338,29 @@ html, body {
 .dxpnlControl_Office2003Blue.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2003Blue .footerMenu li
 {
-    background-color: #BCD4F6;
+	background-color: #BCD4F6;
 }
 .dxpnlControl_Office2003Blue .footerMenu div
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Blue .leftPanel > ul
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Blue .templateTitle a,
 .dxpnlControl_Office2003Blue .loginControl,
 .dxpnlControl_Office2003Blue .loginControl a
 {
-    color: #4B4B57;
+	color: #4B4B57;
 }
 .dxpnlControl_Office2003Blue .loginControl a 
 {
-    border-bottom-color: #4B4B57;
+	border-bottom-color: #4B4B57;
 }
 .dxpnlControl_Office2003Blue .accountHeader p
 {
-    color: #424242;
+	color: #424242;
 }
 
 
@@ -323,29 +369,29 @@ html, body {
 .dxpnlControl_Office2003Olive.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2003Olive .footerMenu li
 {
-    background-color: #D6DCBB;
+	background-color: #D6DCBB;
 }
 .dxpnlControl_Office2003Olive .footerMenu div
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Olive .leftPanel > ul
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Olive .templateTitle a,
 .dxpnlControl_Office2003Olive .loginControl,
 .dxpnlControl_Office2003Olive .loginControl a
 {
-    color: #4B4B57;
+	color: #4B4B57;
 }
 .dxpnlControl_Office2003Olive .loginControl a 
 {
-    border-bottom-color: #4B4B57;
+	border-bottom-color: #4B4B57;
 }
 .dxpnlControl_Office2003Olive .accountHeader p
 {
-    color: #424242;
+	color: #424242;
 }
 
 /* Office2003Silver */
@@ -353,29 +399,29 @@ html, body {
 .dxpnlControl_Office2003Silver.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2003Silver .footerMenu li
 {
-    background-color: #D0D0DE;
+	background-color: #D0D0DE;
 }
 .dxpnlControl_Office2003Silver .footerMenu div
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Silver .leftPanel > ul
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_Office2003Silver .templateTitle a,
 .dxpnlControl_Office2003Silver .loginControl,
 .dxpnlControl_Office2003Silver .loginControl a
 {
-    color: #4B4B57;
+	color: #4B4B57;
 }
 .dxpnlControl_Office2003Silver .loginControl a
 {
-    border-bottom-color: #4B4B57;
+	border-bottom-color: #4B4B57;
 }
 .dxpnlControl_Office2003Silver .accountHeader p
 {
-    color: #424242;
+	color: #424242;
 }
 
 /* Office2010Black */
@@ -383,22 +429,22 @@ html, body {
 .dxpnlControl_Office2010Black.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2010Black .footerMenu li
 {
-    background-color: #393939;
-    color: white;
+	background-color: #393939;
+	color: white;
 }
 .dxpnlControl_Office2010Black .footerMenu a
 {
-    color: white !important;
+	color: white !important;
 }
 .dxpnlControl_Office2010Black .accountHeader h2
 {
-    color: #3C3C3C;
+	color: #3C3C3C;
 }
 .dxpnlControl_Office2010Black .loginControl a,
 .dxpnlControl_Office2010Black .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -407,21 +453,21 @@ html, body {
 .dxpnlControl_Office2010Blue.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2010Blue .footerMenu li
 {
-    background-color: #D3E4F6;
+	background-color: #D3E4F6;
 }
 .dxpnlControl_Office2010Blue .templateTitle a,
 .dxpnlControl_Office2010Blue .loginControl,
 .dxpnlControl_Office2010Blue .loginControl a
 {
-    color: Black;
+	color: Black;
 }
 .dxpnlControl_Office2010Blue .loginControl a 
 {
-    border-bottom-color: Black;
+	border-bottom-color: Black;
 }
 .dxpnlControl_Office2010Blue .accountHeader h2
 {
-    color: #498BC2;
+	color: #498BC2;
 }
 
 
@@ -430,18 +476,18 @@ html, body {
 .dxpnlControl_Office2010Silver.dxpnl-edge.b.footerPane,
 .dxpnlControl_Office2010Silver .footerMenu li
 {
-    background-color: #A9ACB4;
-    color: white;
+	background-color: #A9ACB4;
+	color: white;
 }
 .dxpnlControl_Office2010Silver .accountHeader h2
 {
-    color: #3B3B3B;
+	color: #3B3B3B;
 }
 .dxpnlControl_Office2010Silver .loginControl a,
 .dxpnlControl_Office2010Silver .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -451,26 +497,26 @@ html, body {
 .dxpnlControl_PlasticBlue.dxpnl-edge.b.footerPane,
 .dxpnlControl_PlasticBlue .footerMenu li
 {
-    background-color :#3C4F8F;
-    color: white;
+	background-color :#3C4F8F;
+	color: white;
 }
 .dxpnlControl_PlasticBlue.dxpnl-edge.t.headerPane
 {
-    background-image: url('images/PlasticBlueHeader.jpg');
+	background-image: url('images/PlasticBlueHeader.jpg');
 }
 .dxpnlControl_PlasticBlue .accountHeader h2
 {
-    color: #5A83D0;
+	color: #5A83D0;
 }
 .dxpnlControl_PlasticBlue .accountHeader p
 {
-    color: #575757;
+	color: #575757;
 }
 .dxpnlControl_PlasticBlue .loginControl a,
 .dxpnlControl_PlasticBlue .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -479,27 +525,27 @@ html, body {
 .dxpnlControl_RedWine.dxpnl-edge.b.footerPane,
 .dxpnlControl_RedWine .footerMenu li
 {
-    background-color: #78002B;
-    color: white;
+	background-color: #78002B;
+	color: white;
 }
 .dxpnlControl_RedWine.dxpnl-edge.t.headerPane
 {
-    background-image: url('images/RedWineHeader.jpg');
-    background-position: top right;
+	background-image: url('images/RedWineHeader.jpg');
+	background-position: top right;
 }
 .dxpnlControl_RedWine .footerMenu div 
 {
-    background: transparent none;
+	background: transparent none;
 }
 .dxpnlControl_RedWine .accountHeader h2
 {
-    color: #8A0A37;
+	color: #8A0A37;
 }
 .dxpnlControl_RedWine .loginControl a,
 .dxpnlControl_RedWine .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 
@@ -508,26 +554,26 @@ html, body {
 .dxpnlControl_SoftOrange.dxpnl-edge.b.footerPane,
 .dxpnlControl_SoftOrange .footerMenu li
 {
-    background-color: #F9F9F9 !important;
-    background-image: none !important;
+	background-color: #F9F9F9 !important;
+	background-image: none !important;
 }
 .dxpnlControl_SoftOrange .templateTitle a,
 .dxpnlControl_SoftOrange .loginControl,
 .dxpnlControl_SoftOrange .loginControl a
 {
-    color: Black;
+	color: Black;
 }
 .dxpnlControl_SoftOrange .loginControl a 
 {
-    border-bottom-color: Black;
+	border-bottom-color: Black;
 }
 .dxpnlControl_SoftOrange .accountHeader h2
 {
-    color: Black;
+	color: Black;
 }
 .dxpnlControl_SoftOrange .accountHeader p
 {
-    color: #707070;
+	color: #707070;
 }
 
 
@@ -536,156 +582,156 @@ html, body {
 .dxpnlControl_Youthful.dxpnl-edge.b.footerPane,
 .dxpnlControl_Youthful .footerMenu li
 {
-    background-color: #8AA150;
-    color: white !important;
+	background-color: #8AA150;
+	color: white !important;
 }
 .dxpnlControl_Youthful .accountHeader h2
 {
-    color: #80A70E;
+	color: #80A70E;
 }
 .dxpnlControl_Youthful .loginControl a,
 .dxpnlControl_Youthful .templateTitle a
 {
-    color: White;
-    border-color: White;
+	color: White;
+	border-color: White;
 }
 
 /* Metropolis */
 .dxpnlControl_Metropolis.dxpnl-edge.t.headerPane,
 .dxpnlControl_Metropolis .footerMenu li
 {
-    background-color: White;
-    color: Black;
+	background-color: White;
+	color: Black;
 }
 .dxpnlControl_Metropolis.rightPane
 {
-    width: 400px;
+	width: 400px;
 }
 .dxpnlControl_Metropolis .accountHeader h2
 {
-    color: #3B3B3B;
+	color: #3B3B3B;
 }
 .dxpnlControl_Metropolis .loginControl a,
 .dxpnlControl_Metropolis .templateTitle a
 {
-    color: Black;
-    border-color: Black;
+	color: Black;
+	border-color: Black;
 }
 .dxpnlControl_Metropolis .templateTitle a 
 {
-    font-size: 28px;
+	font-size: 28px;
 }
 
 /* MetropolisBlue */
 .dxpnlControl_MetropolisBlue.dxpnl-edge.t.headerPane,
 .dxpnlControl_MetropolisBlue .footerMenu li
 {
-    background-color: White;
-    color: Black;
+	background-color: White;
+	color: Black;
 }
 .dxpnlControl_MetropolisBlue.rightPane
 {
-    width: 400px;
+	width: 400px;
 }
 .dxpnlControl_MetropolisBlue .accountHeader h2
 {
-    color: #3B3B3B;
+	color: #3B3B3B;
 }
 .dxpnlControl_MetropolisBlue .loginControl a,
 .dxpnlControl_MetropolisBlue .templateTitle a
 {
-    color: Black;
-    border-color: Black;
+	color: Black;
+	border-color: Black;
 }
 .dxpnlControl_MetropolisBlue .templateTitle a 
 {
-    font-size: 28px;
+	font-size: 28px;
 }
 
 /* Moderno */
 .dxpnlControl_Moderno.dxpnl-edge.t.headerPane,
 .dxpnlControl_Moderno .footerMenu li
 {
-    background-color: White;
-    color: Black;
+	background-color: White;
+	color: Black;
 }
 .dxpnlControl_Moderno.headerPane .headerMenu .dxm-main
 {
-    border-color: #000000;
-    border-style: solid;
+	border-color: #000000;
+	border-style: solid;
 }
 .dxpnlControl_Moderno.leftPane
 {
-    padding: 0px;
+	padding: 0px;
 }
 .dxpnlControl_Moderno.leftPane .dxnbLite_Moderno .dxnb-gr:first-child .dxnb-header,
 .dxpnlControl_Moderno.leftPane .dxnbLite_Moderno .dxnb-gr:first-child .dxnb-headerCollapsed
 {
-    border-top: 0px;
+	border-top: 0px;
 }
 .dxpnlControl_Moderno.rightPane
 {
-    width: 350px;
+	width: 350px;
 }
 .dxpnlControl_Moderno .accountHeader h2
 {
-    color: #3B3B3B;
+	color: #3B3B3B;
 }
 .dxpnlControl_Moderno .loginControl a,
 .dxpnlControl_Moderno .templateTitle a
 {
-    font-size: 14px;
-    color: #0072c6;
-    border-color: #0072c6;
+	font-size: 14px;
+	color: #0072c6;
+	border-color: #0072c6;
 }
 .dxpnlControl_Moderno .templateTitle a 
 {
-    font-size: 28px;
+	font-size: 28px;
 }
 .dxpnlControl_Moderno .contentPane .dxgvControl_Moderno .dxgvTable_Moderno
 {
-    border: 0!important;
+	border: 0!important;
 }
 .dxpnlControl_Moderno .contentPane .dxgvControl_Moderno .dxgvHeader_Moderno
 {
-    border-top: 0!important;
+	border-top: 0!important;
 }
 .dxpnlControl_Moderno.dxpnl-edge.b.footerPane 
 {
-    background: #EDEDED;
+	background: #EDEDED;
 }
 
 /* Mulberry */
 .dxpnlControl_Mulberry .footerMenu li
 {
-    background-color: White;
-    color: Black;
+	background-color: White;
+	color: Black;
 }
 .dxpnlControl_Mulberry .accountHeader h2
 {
-    color: #3B3B3B;
+	color: #3B3B3B;
 }
 .dxpnlControl_Mulberry .loginControl a,
 .dxpnlControl_Mulberry .templateTitle a
 {
-    color: #BF4E6A;
-    border-color: #BF4E6A;
-    font-size: 14px;
+	color: #BF4E6A;
+	border-color: #BF4E6A;
+	font-size: 14px;
 }
 .dxpnlControl_Mulberry .templateTitle a 
 {
-    font-size: 28px;
+	font-size: 28px;
 }
 .dxpnlControl_Mulberry.dxpnl-edge.t.headerPane,
 .dxpnlControl_Mulberry.dxpnl-edge.b.footerPane
 {
-    background: #F1F2F5;
+	background: #F1F2F5;
 }
 .dxpnlControl_Mulberry .contentPane .dxgvControl_Mulberry .dxgvTable_Mulberry
 {
-    border: 0!important;
+	border: 0!important;
 }
 .dxpnlControl_Mulberry .contentPane .dxgvControl_Mulberry .dxgvHeader_Mulberry
 {
-    border-top: 0!important;
+	border-top: 0!important;
 }
