--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/HeaderPartialView.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/HeaderPartialView.cshtml
@@ -2,27 +2,33 @@
 
 @if(Model == HeaderViewRenderMode.Title) {
     <div class="templateTitle">
-        @Html.ActionLink("Project Title", "Index", "Home")
+        @Html.ActionLink("KetoSavage Client Portal", "Index", "Home")
     </div>
 } else { 
     if(Model == HeaderViewRenderMode.Full) { 
         <div class="headerTop">
+
             <div class="templateTitle">
-                @Html.ActionLink("Project Title", "Index", "Home")
+                <a href='@Url.Action("Index", "Home")'>
+                    <img src="~/Content/Images/KSHeaderLogo_white.png" />
+                </a>
             </div>
             <div class="loginControl">
                 @Html.Partial("LogOnPartialView")
             </div>
         </div>
     }
-
-    <div class="headerMenu">
-            @* DXCOMMENT: Configure the header menu *@
-    @Html.DevExpress().Menu(settings => {
+    if (Request.IsAuthenticated)
+    {
+        <div class="headerMenu">
+                @* DXCOMMENT: Configure the header menu *@
+        @Html.DevExpress().Menu(settings =>
+    {
         settings.Name = "HeaderMenu";
         settings.ItemAutoWidth = false;
         settings.ControlStyle.CssClass = "headerMenu";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
     }).BindToXML(HttpContext.Current.Server.MapPath("~/App_Data/TopMenu.xml"), "/items/*").GetHtml()
     </div>
-}
+        }
+    }
