--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/HeaderPartialView.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/HeaderPartialView.cshtml
@@ -1,11 +1,15 @@
 @model HeaderViewRenderMode?
 
-@if(Model == HeaderViewRenderMode.Title) {
+@if (Model == HeaderViewRenderMode.Title)
+{
     <div class="templateTitle">
         @Html.ActionLink("KetoSavage Client Portal", "Index", "Home")
     </div>
-} else { 
-    if(Model == HeaderViewRenderMode.Full) { 
+}
+else
+{
+    if (Model == HeaderViewRenderMode.Full)
+    {
         <div class="headerTop">
 
             <div class="templateTitle">
@@ -21,14 +25,44 @@
     if (Request.IsAuthenticated)
     {
         <div class="headerMenu">
-                @* DXCOMMENT: Configure the header menu *@
-        @Html.DevExpress().Menu(settings =>
-    {
-        settings.Name = "HeaderMenu";
-        settings.ItemAutoWidth = false;
-        settings.ControlStyle.CssClass = "headerMenu";
-        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+            @* DXCOMMENT: Configure the header menu *@
+            @Html.DevExpress().Menu(settings =>
+       {
+           settings.Name = "HeaderMenu";
+           settings.ItemAutoWidth = false;
+           settings.ControlStyle.CssClass = "headerMenu";
+           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+           settings.ItemDataBound = (sender, e) =>
+           {
+               var node = e.Item.DataItem as IHierarchyData;
+               var item = node.Item as System.Xml.XmlElement;
+               if (item != null)
+               {
+                   string itemText = item.GetAttribute("Text");
+                   if (!String.IsNullOrEmpty(itemText))
+                   {
+                       string allowedRoles = item.GetAttribute("Roles");
+                       if (String.IsNullOrEmpty(allowedRoles))
+                       {
+                           e.Item.Visible = true;
+                       }
+                       else if (HttpContext.Current.User != null)
+                       {
+                           e.Item.Visible = false;
+                           string[] roles = allowedRoles.Split(';');
+                           foreach (var role in roles)
+                           {
+                               if (HttpContext.Current.User.IsInRole(role))
+                               {
+                                   e.Item.Visible = true;
+                                   break;
+                               }
+                           }
+                       }
+                   }
+               }
+           };
     }).BindToXML(HttpContext.Current.Server.MapPath("~/App_Data/TopMenu.xml"), "/items/*").GetHtml()
-    </div>
-        }
+        </div>
     }
+}
