--- a/KetoSavageWeb/KetoSavageWeb/Views/UsersAdmin/UserGridPartialView.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UsersAdmin/UserGridPartialView.cshtml
@@ -3,6 +3,13 @@
 {
     users.Name = "gvUsers";
     users.CallbackRouteValues = new { Controller = "UsersAdmin", Action = "userGridPartialView" };
+    users.KeyFieldName = "UserName";
+    users.SettingsEditing.AddNewRowRouteValues = new { Controller = "Editing", Action = "EditAddNewUser" };
+    users.SettingsEditing.UpdateRowRouteValues = new { Controller = "Editing", Action = "EditUpdateUser" };
+    users.SettingsEditing.DeleteRowRouteValues = new { Controller = "Editing", Action = "EditDeleteUser" };
+    users.SettingsEditing.Mode = GridViewEditingMode.PopupEditForm;
+    users.SettingsBehavior.ConfirmDelete = true;
+    users.SettingsPopup.EditForm.Width = 600;
     users.Width = Unit.Percentage(50);
     users.SettingsPager.PageSize = 50;
     users.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
@@ -10,9 +17,19 @@
     users.ControlStyle.Border.BorderWidth = Unit.Pixel(0);
     users.ControlStyle.Paddings.PaddingTop = Unit.Pixel(10);
     users.SettingsBehavior.AllowFixedGroups = true;
-    users.Settings.ShowGroupPanel = false;
+    users.Settings.ShowGroupPanel = true;
 
-    users.KeyFieldName = "UserName";
+    users.SettingsPopup.EditForm.SettingsAdaptivity.Mode = PopupControlAdaptivityMode.OnWindowInnerWidth;
+    users.SettingsPopup.EditForm.SettingsAdaptivity.SwitchAtWindowInnerWidth = 768;
+    users.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
+    users.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
+
+    users.CommandColumn.Visible = true;
+    users.CommandColumn.ShowNewButton = true;
+    users.CommandColumn.ShowDeleteButton = true;
+    users.CommandColumn.ShowEditButton = true;
+
+    users.Columns.Add("UserName");
     users.Columns.Add("UserName");
     users.Columns.Add("FirstName");
     users.Columns.Add("LastName");
