--- a/KetoSavageWeb/KetoSavageWeb/Content/Site.css
+++ b/KetoSavageWeb/KetoSavageWeb/Content/Site.css
@@ -63,7 +63,7 @@ html, body {
 .templateTitle a 
 {
 	text-decoration: none;
-	font-size: x-large;
+	font-size: medium;
 	color: #ffffff;
 }
 .loginControl 
