--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientPrograms/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientPrograms/Index.cshtml
@@ -17,11 +17,11 @@
         nav.SetContent(() =>
         {
             ViewContext.Writer.Write(
-                "List of active clients"
-                );
-        });
-
+                Html.Action("ClientList")
+            );
     });
+
+});
     settings.Panes.Add(c =>
     {
         c.SetContent(() =>
