Working but has a multiple context issue.

--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientPrograms/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientPrograms/Index.cshtml
@@ -1,145 +1,1 @@
-﻿@model IEnumerable
-
-
-@section AdditionalResources {
-    <style>
-        .metropolisPane {
-            border: 1px solid #c0c0c0 !important;
-        }
-
-        .youthfulPane {
-            border: 1px solid #d3e4a6 !important;
-        }
-
-        .custom-form-layout,
-        .custom-form-layout > table,
-        .custom-form-layout .dxflGroupSys {
-            width: 100% !important;
-            height: 100% !important;
-        }
-
-        .custom-group {
-            height: 100% !important;
-        }
-    </style>
-    <script>
-        function OnGetRowValues(values) {
-            tbContactName.SetText(values[0]);
-            tbCompanyName.SetText(values[1]);
-            var memoText = '';
-            if (values[2] != null) memoText += 'City: ' + values[2] + '\n';
-            if (values[3] != null) memoText += 'Address: ' + values[3] + '\n';
-            if (values[4] != null) memoText += 'Phone: ' + values[4] + '\n';
-            if (values[5] != null) memoText += 'Fax: ' + values[5] + '\n';
-            mContacts.SetText(memoText);
-        }
-
-        function UpdateEditorsValues() {
-            gvEmployees.GetRowValues(gvEmployees.GetFocusedRowIndex(), 'ContactName;CompanyName;City;Address;Phone;Fax', OnGetRowValues);
-        }
-
-        var dataChanged = false;
-        function OnListBoxValueChanged(s, e) {
-            gvEmployees.Refresh();
-            dataChanged = true;
-        }
-
-        function OnSplitterPaneResized(s, e) {
-            var name = e.pane.name;
-            if (name == 'listBoxContainer')
-                ResizeControl(lblEmployees, e.pane);
-            else if (name == 'gridContainer')
-                ResizeControl(gvEmployees, e.pane);
-        }
-
-        function ResizeControl(control, splitterPane) {
-            control.SetWidth(splitterPane.GetClientWidth());
-            control.SetHeight(splitterPane.GetClientHeight());
-        }
-
-        function OnGridEndCallback(s, e) {
-            splResizing.GetPaneByName("gridContainer").RaiseResizedEvent();
-            if (dataChanged) {
-                UpdateEditorsValues();
-                dataChanged = false;
-            }
-        }
-        function OnGridBeginCallback(s, e) {
-            e.customArgs["EmployeeID"] = lblEmployees.GetValue();
-        }
-    </script>
-}
-@using (Html.BeginForm())
-{
-    @Html.DevExpress().Splitter(
-        settings =>
-        {
-            settings.Name = "splResizing";
-            settings.Height = 400;
-            settings.Width = Unit.Percentage(100);
-            settings.Styles.Pane.Paddings.Padding = 0;
-
-            settings.Panes.Add(listBoxPane =>
-            {
-                listBoxPane.Name = "listBoxContainer";
-                listBoxPane.Size = Unit.Percentage(20);
-                listBoxPane.ShowCollapseBackwardButton = DefaultBoolean.True;
-                listBoxPane.SetContent(() =>
-                {
-                    @Html.DevExpress().ListBox(
-                        listBoxSettings =>
-                        {
-                            listBoxSettings.Name = "lblEmployees";
-                            listBoxSettings.Height = Unit.Percentage(100);
-                            listBoxSettings.ControlStyle.Border.BorderWidth = 0;
-
-                            listBoxSettings.Properties.TextField = "Name";
-                            listBoxSettings.Properties.ValueField = "ID";
-                            listBoxSettings.Properties.ValueType = typeof(Int32);
-                            listBoxSettings.SelectedIndex = 0;
-
-                            listBoxSettings.Properties.ClientSideEvents.ValueChanged = "OnListBoxValueChanged";
-                        })
-                        .BindList(ViewData["Employees"])
-                        .Render();
-                });
-            });
-            settings.Panes.Add(contentPane =>
-            {
-                contentPane.MinSize = 350;
-
-                contentPane.Panes.Add(gridPane =>
-                {
-                    gridPane.Name = "gridContainer";
-                    gridPane.Size = Unit.Percentage(60);
-                    gridPane.MinSize = 100;
-                    gridPane.SetContent(() =>
-                    {
-                        @Html.RenderPartial("ResizingPartial", Model);
-                    });
-                });
-
-                contentPane.Panes.Add(editorsPane =>
-                {
-                    editorsPane.Name = "editorsContainer";
-                    editorsPane.MinSize = 100;
-                    editorsPane.ShowCollapseForwardButton = DefaultBoolean.True;
-                    editorsPane.SetContent(() =>
-                    {
-                        @Html.RenderPartial("ResizingLayoutPartial", Model);
-                    });
-                });
-            });
-
-            settings.ClientSideEvents.PaneResized = "OnSplitterPaneResized";
-            settings.PreRender = (sender, e) =>
-            {
-                if (ASPxWebControl.GlobalTheme.Contains("Metropolis"))
-                    ((MVCxSplitter)sender).Styles.Pane.CssClass = "metropolisPane";
-                else if (ASPxWebControl.GlobalTheme.Contains("Youthful"))
-                    ((MVCxSplitter)sender).Styles.Pane.CssClass = "youthfulPane";
-                else
-                    ((MVCxSplitter)sender).Styles.Pane.CssClass = string.Empty;
-            };
-        }).GetHtml()
-}
+﻿@*@Html.Action("ClientGridViewPartial")*@
